<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:padding="@dimen/activity_padding"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/wrapContentStyle"
            android:text="@string/hey_there"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:textSize="24sp" />

        <TextView
            style="@style/TextStyle"
            android:textColor="@color/colorBlack"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/hello" />

        <LinearLayout style="@style/questionBox">

            <TextView
                style="@style/TextStyle"
                android:text="@string/firstq" />

            <EditText
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout style="@style/questionBox">

            <TextView
                style="@style/TextStyle"
                android:text="@string/secondq" />

            <CheckBox
                android:id="@+id/first_checkbox"
                style="@style/wrapContentStyle"
                android:layout_marginTop="12dp"
                android:text="@string/positive_number"
                android:textColor="@color/colorText" />

            <CheckBox
                android:id="@+id/second_checkbox"
                style="@style/wrapContentStyle"
                android:layout_marginTop="12dp"
                android:text="@string/negative_number"
                android:textColor="@color/colorText" />

            <CheckBox
                android:id="@+id/third_checkbox"
                style="@style/wrapContentStyle"
                android:layout_marginTop="12dp"
                android:text="@string/odd_number"
                android:textColor="@color/colorText" />

            <CheckBox
                android:id="@+id/fourth_checkbox"
                style="@style/wrapContentStyle"
                android:layout_marginTop="12dp"
                android:text="@string/even_number"
                android:textColor="@color/colorText" />

        </LinearLayout>

        <LinearLayout style="@style/questionBox">

            <TextView
                style="@style/TextStyle"
                android:text="@string/thirdq" />

            <EditText
                android:id="@+id/sequence_number"
                style="@style/EditText" />

        </LinearLayout>

        <LinearLayout style="@style/questionBox">

            <TextView
                style="@style/TextStyle"
                android:text="@string/fourthq" />

            <EditText
                android:id="@+id/odd_number"
                style="@style/EditText"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout style="@style/questionBox">

            <TextView
                style="@style/TextStyle"
                android:text="@string/fifthq" />

            <EditText
                android:id="@+id/even_number"
                style="@style/EditText"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout style="@style/questionBox">

            <TextView
                style="@style/TextStyle"
                android:text="@string/sixthq" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">


                <ImageView
                    android:id="@+id/imageView"
                    style="@style/ImageStyle"
                    android:src="@drawable/triangle" />

                <RadioGroup
                    style="@style/RadioGroup"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="24dp">

                    <RadioButton
                        style="@style/RadioButton"
                        android:text="@string/ninety_degrees" />

                    <RadioButton
                        android:id="@+id/triangle_angle"
                        style="@style/RadioButton"
                        android:text="@string/sixty_degrees" />

                    <RadioButton
                        style="@style/RadioButton"
                        android:text="@string/fourty_five_degrees" />

                </RadioGroup>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout style="@style/questionBox">

            <TextView
                style="@style/TextStyle"
                android:text="@string/seventhq" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    style="@style/ImageStyle2"
                    android:src="@drawable/rectangle" />

                <RadioGroup
                    style="@style/RadioGroup"
                    android:layout_marginLeft="24dp">

                    <RadioButton
                        style="@style/RadioButton"
                        android:text="@string/triangle" />

                    <RadioButton
                        android:id="@+id/rectangle"
                        style="@style/RadioButton"
                        android:text="@string/rectangle" />

                    <RadioButton
                        style="@style/RadioButton"
                        android:text="@string/square" />
                </RadioGroup>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout style="@style/questionBox">

            <TextView
                style="@style/TextStyle"
                android:text="@string/eighthq" />

            <RadioGroup style="@style/RadioGroup">

                <RadioButton
                    style="@style/RadioButton"
                    android:text="@string/true_answer" />

                <RadioButton
                    android:id="@+id/square_false"
                    style="@style/RadioButton"
                    android:text="@string/false_answer" />

            </RadioGroup>

        </LinearLayout>

        <LinearLayout style="@style/questionBox">

            <TextView
                style="@style/TextStyle"
                android:text="@string/ninthq" />

            <RadioGroup style="@style/RadioGroup">

                <RadioButton
                    android:id="@+id/firstfirst"
                    style="@style/RadioButton"
                    android:text="@string/fourteen" />

                <RadioButton
                    style="@style/RadioButton"
                    android:text="@string/fifteen" />

                <RadioButton
                    style="@style/RadioButton"
                    android:text="@string/sixteen" />

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/score_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="showScore"
                android:padding="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/answer" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>
